Adding some content

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Ground provides additional context to your LLMs'
 ---
 
 <img
@@ -14,58 +14,56 @@ description: 'Welcome to the home of your new documentation'
   alt="Hero Dark"
 />
 
-## Setting up
+## Focus On Your Product
 
-The first step to world-class documentation is setting up your editing environments.
-
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+Parsing and chunking different file formats, embedding, storing in a vector database, managing access control,
+semantic search, observability, deploying the whole thing…<br />
+Building Retrieval-Augmented Generation (RAG) is tedious.<br />
+Send us the docs. Query the docs<br/>
+That's all you have to do!
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Guides"
+    icon="book"
+    href="/guides/introduction"
   >
-    Customize your docs to your company's colors and brands
+    Tutorials and best practices to get you up and running quickly.
   </Card>
   <Card
     title="Reference APIs"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="/api-reference/introduction"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Comprehensive details about the Ground API.
+  </Card>
+  <Card
+    title="FAQ"
+    icon="question"
+    href="/essentials/faq"
+  >
+    Some Stuff
   </Card>
   <Card
     title="Add Components"
     icon="screwdriver-wrench"
     href="https://mintlify.com/docs/components/accordion"
   >
-    Build interactive features and designs to guide your users
+    Some Stuff
   </Card>
   <Card
     title="Get Inspiration"
     icon="stars"
     href="https://mintlify.com/customers"
   >
-    Check out our showcase of our favorite documentation
+    Some Stuff
   </Card>
+  <Card
+    title="Get In Touch"
+    icon="envelope"
+    href="#"
+  >
+    contact@ground.dev
+  </Card>
+  
 </CardGroup>
