Remove essentials tabs, update intro pages and put a note on document-upload

--- a/api-reference/endpoint/upload-document.mdx
+++ b/api-reference/endpoint/upload-document.mdx
@@ -1,3 +1,5 @@
 ---
 openapi: post /api/documents
 ---
+<Warning>The file upload UI on this page is not fonctional at the moment.<br />
+You can use the UI from [our platform](https://platform.ground.dev/dashboard/documents).</Warning>
