--- a/introduction.mdx
+++ b/introduction.mdx
@@ -42,21 +42,7 @@ That's all you have to do!
     icon="question"
     href="/essentials/faq"
   >
-    Some Stuff
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Some Stuff
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Some Stuff
+    Answers to most common questions.
   </Card>
   <Card
     title="Get In Touch"
