fix link in Quickstart, fix openAPI url

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -22,6 +22,10 @@ Building Retrieval-Augmented Generation (RAG) is tedious.<br />
 Send us the docs. Query the docs<br/>
 That's all you have to do!
 
+### Want to give Ground a try?
+Check our [Quickstart](/quickstart) guide and test the product without writing any line of code!
+
+
 <CardGroup cols={2}>
   <Card
     title="Guides"
