--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,7 +3,7 @@ title: 'Quickstart'
 description: 'Call the Ground API without writing a line of code'
 ---
 
-1. To start, you need to create an account [here](http://platform.ground.dev/).
+1. To start, you need to create an account [here](http://platform.ground.dev/dashboard).
 2. From the [API Keys](https://platform.ground.dev/dashboard/api-keys) tab and click on the button **+ Create new secret key**.
 3. A **Create secret key** modal will open, you can name the secret key.<br />
 Click on **create secret key**.<br />
