minor change to quickstart.mdx

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Quickstart'
-description: 'Call the Ground API without writing a line of code'
+description: 'Call and try Ground without writing a line of code'
 ---
 
 1. To start, you need to create an account [here](http://platform.ground.dev/dashboard).
@@ -8,7 +8,7 @@ description: 'Call the Ground API without writing a line of code'
 3. A **Create secret key** modal will open, you can name the secret key.<br />
 Click on **create secret key**.<br />
 **Copy** the secret key from the **Save your key** modal that just opened.<br />
-<p><Icon icon="triangle-exclamation" color="F80" /> You will not see the secret key again.</p>
+<Warning>You will not see the secret key again.</Warning>
 4. Go to the [Documents](https://platform.ground.dev/dashboard/documents) tab.<br />
 **Drop** or click on **Drop files here to upload**, and upload a file you want to query against.<br />
 You should see the file name appear on the page once it is uploaded.
