--- a/development.mdx
+++ b/development.mdx
@@ -133,12 +133,11 @@ if __name__ == "__main__":
 ```
 
 And voila!<br />
+That's the gist of it.<br />
 You have a working ChatGPT using the context you provided to it.<br />
 You can change the code to use open source, fine tuned, or other models.<br />
 Modify and play around with the prompts to get results that fit your needs.<br />
 <Info>Storing the different keys in a .env file or secret manager is recommended.
 Don't share them online.</Info>
-But that's the gist of it.
-<br />
 Thank you for following this tutorial.<br />
 If you have questions feel free to contact us.
