update intro pages

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,16 +1,13 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: 'API Reference'
 ---
-
-## Welcome
 
 There are two ways to build your API with Ground: The [API endpoints](/api-reference/introduction) and the [SDK](##).<br />
 Here is a link to our OpenAPI yaml specifications:
 
 <Card
   title="Ground's API repository"
-  icon="tree"
+  icon="github"
   href="https://github.com/ground-ai/docs/blob/main/api-reference/openapi.yaml"
 >
   View the OpenAPI specification file
