--- a/guides/introduction.mdx
+++ b/guides/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing Guides'
+title: 'Guides and resources'
+description: 'Resources to help you build with Ground'
 ---
 
-Page under construction
+Coming soon
